--- a/src/Main/ShortestPath.RoadNetworkData.Build.csproj
+++ b/src/Main/ShortestPath.RoadNetworkData.Build.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Import\ShapeFileImporterInput.cs" />
     <Compile Include="Import\ShapeFileImporterOutput.cs" />
     <None Include="Import\TeleAtlasImporter.cs" />
+    <None Include="LICENSE.md" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -142,6 +143,9 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="LICENSE.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
