--- a/src/Main/ShortestPath.RoadNetworkData.Dev.csproj
+++ b/src/Main/ShortestPath.RoadNetworkData.Dev.csproj
@@ -92,6 +92,7 @@
     <Compile Include="GraphUtils.cs" />
     <Compile Include="Import\NavteqImporter2.cs" />
     <Compile Include="SqlServerTypes\Loader.cs" />
+    <None Include="app.config" />
     <None Include="Import\NavteqImporter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
